grist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grist-svc
  namespace: homelab
  labels:
    name: grist-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
      targetPort: 3000
      protocol: TCP
      # nodePort: 30000
  selector:
    name: grist
