grist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist-ing
  namespace: homelab
  labels:
    name: grist
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grist-svc
                port:
                  number: 40000
